--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,19 +1,33 @@
 [project]
 name = "cli-template-python"
-version = "0.1.0"
+#version = "0.1.0"
+dynamic = ["version"]
 description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
+    "jsonargparse[ruyaml,signatures]>=4.34.0",
     "taskipy>=1.14.0",
+    "typer[all]>=0.13.0",
 ]
-#dynamic = ["version"]
+
+[build-system]
+requires = ["setuptools>=64", "setuptools_scm>=8"]
+build-backend = "setuptools.build_meta"
+
+[tool.setuptools_scm]
+write_to = "src/calc1/_version.py"
+#version_scheme = "post-release"
+version_scheme = "no-guess-dev"
+local_scheme = "no-local-version"
 
 [project.scripts]
-cli_template_python = "calc.cli:cli_main"
+calc1 = "calc1.cli:main_cli"
+calc2 = "calc2.cli:main_cli"
+calc3 = "calc3.cli:main_cli"
 
-[tool.setuptools]
-package-dir = {"" = "src"}
+[tool.hatch.build.targets.wheel]
+packages = [ "src" ]
 
 [dependency-groups]
 dev = [
@@ -22,20 +36,21 @@ dev = [
     "mkdocstrings-python>=1.12.2",
     "mkdocstrings>=0.26.2",
     "mkdocs-material>=9.5.43",
-    "jupyter>=1.1.1",
-    "jupyter-console>=6.6.3",
-    "notebook>=7.0.7",
-    "jupyterlab>=4.3.0",
-    "jupytext>=1.16.4",
-    "nteract-on-jupyter>=2.1.3",
+    #"jupyter>=1.1.1",
+    #"jupyter-console>=6.6.3",
+    #"notebook>=7.0.7",
+    #"jupytext>=1.16.4",
+    #"nteract-on-jupyter>=2.1.3",
     "pytest-cov>=6.0.0",
     "pytest-html>=4.1.1",
+    "nox>=2024.10.9",
+    "coverage[toml]>=7.6.4",
 ]
 
 [tool.taskipy.tasks]
 test = { cmd = "python -m pytest --cov=src --cov-report=html", help = "run pytest" }
-add = { cmd = "python -m src.calc add 20 30", help = "run add" }
-mul = { cmd = "python -m src.calc mul 20 30", help = "run mul" }
-version = { cmd = "python -m src.calc --version", help = "run version" }
-help = { cmd = "python -m src.calc --help", help = "run calc" }
+add = { cmd = "python -m src.calc1 add 20 30", help = "run add" }
+mul = { cmd = "python -m src.calc1 mul 20 30", help = "run mul" }
+version = { cmd = "python -m src.calc1 --version", help = "run version" }
+help = { cmd = "python -m src.calc1 --help", elp = "run calc" }
 lint = { cmd = "uvx ruff check", help = "run linter" }
