--- a/ruff.toml
+++ b/ruff.toml
@@ -17,6 +17,7 @@ exclude = [
     ".tox",
     ".venv",
     ".vscode",
+    "__pycache__",
     "__pypackages__",
     "_build",
     "buck-out",
@@ -25,16 +26,31 @@ exclude = [
     "node_modules",
     "site-packages",
     "venv",
+    "_version.py",
 ]
 
-line-length = 88
+line-length = 100
 indent-width = 4
+force-exclude = true
 
 [lint]
-select = ["RUF", "E", "F", "D", "I", "Q"]
-ignore = ["D100", "D203", "D213", "D400", "D401", "D413", "D415"]
+select = [
+    "E",    # pycodestyle error
+    "F",    # Pyflakes
+    "W",    # pycodestyle warning
+    "I",    # isort
+    "B",    # flake8-bugbear
+    "N",    # pep8-naming
+    "RUF",
+]
+fixable = ["E4", "E7", "E9", "F", "I"]
+ignore = ["E501", "D100", "D203", "D213", "D400", "D401", "D413", "D415"]
 
 [lint.per-file-ignores]
 "tests/*" = ["D100", "D103"]
 "__init__.py" = ["D100", "D104"]
 "__main__.py" = ["D100", "D104"]
+"noxfile.py" = ["D100", "D103", "D104"]
+
+[format]
+line-ending = "lf"
