--- a/mypy.ini
+++ b/mypy.ini
@@ -10,8 +10,10 @@ disallow_untyped_defs = True
 error_summary = True
 ignore_missing_imports = True
 implicit_reexport = True
+install_types = True
 namespace_packages = True
 no_implicit_optional = True
+no_strict_optional = True
 pretty = True
 show_column_numbers = True
 show_error_codes = True
@@ -24,4 +26,3 @@ warn_return_any = True
 warn_unreachable = True
 warn_unused_configs = True
 warn_unused_ignores = False
-no_strict_optional = True
